# tidybox

./: LICENSE  README.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/.github/workflows/: ci.yml
cpp/agent/include/: EventBuffer.h  FSEventsAgent.h
cpp/agent/src/: EventBuffer.cpp  FSEventsAgent.cpp  main.cpp
